# rendezqueue_ccgrpc

./: .bazelrc  MODULE.bazel
.github/: renovate.json5
.github/workflows/: test_bazel.yaml
