module(
    name = "rendezqueue_ccgrpc",
    version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(
    name = "abseil-cpp",
    version = "20240116.2",
    #version = "20240722.0",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "grpc",
    version = "1.63.1",
    repo_name = "com_github_grpc_grpc",
)

bazel_dep(
    name = "fildesh",
    version = "0.2.0",
    dev_dependency = True,
)

bazel_dep(
    name = "rules_sxproto",
    version = "0.0.4",
    dev_dependency = True,
)
git_override(
    module_name = "rules_sxproto",
    remote = "https://github.com/rendezqueue/rules_sxproto.git",
    commit = "aa67dfd89684235fc884244714e0d87d77b63633",  # TODO
)
